fix spacing di mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -39,7 +39,7 @@
 
 @media (min-width: 320px) and (max-width: 575px) {
   .video-container {
-    height: 300px;
+    height: auto;
   }
 }
 .banner.style--2 .content {
